--- a/cms-project/views/partials/home/home-nav.handlebars
+++ b/cms-project/views/partials/home/home-nav.handlebars
@@ -20,6 +20,12 @@
                     <a class="nav-link" href="#">Services</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
