--- a/cms-project/views/partials/home/home-nav.handlebars
+++ b/cms-project/views/partials/home/home-nav.handlebars
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="/admin">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Register</a>
