--- a/cms-project/views/admin/posts/create.handlebars
+++ b/cms-project/views/admin/posts/create.handlebars
@@ -3,15 +3,25 @@
     <div class='form-group'>
         <label for='exampleInputTitle1'>Title</label>
         <input type='text' class='form-control' id='exampleInputTitle1' aria-describedby='etitleelp'>
-        <small id='titleHelp' class='form-text text-muted'>We'll never share your email with anyone else.</small>
+        {{!-- <small id='titleHelp' class='form-text text-muted'>We'll never share your email with anyone else.</small>
+        --}}
     </div>
     <div class='form-group'>
-        <label for='exampleInputPassword1'>Password</label>
-        <input type='password' class='form-control' id='exampleInputPassword1'>
+        <label for="status">Status</label>
+        <select name="status" id="status" class="form-control">
+            <option value="public">Public</option>
+            <option value="private">Private</option>
+            <option value="draft">Draft</option>
+        </select>
     </div>
-    <div class='form-group form-check'>
-        <input type='checkbox' class='form-check-input' id='exampleCheck1'>
-        <label class='form-check-label' for='exampleCheck1'>Check me out</label>
+    <div class="form-group form-check">
+        <input name="allowcomments" type="checkbox" id="allowComments" class="form-check-input"
+            placeholder="Enter title">
+        <label for="allowComments">Allow Comments</label>
+    </div>
+    <div class="form-group">
+        <label for="body">Body</label>
+        <textarea name="body" class="form-control" id="body" rows="3" placeholder="Input descrption"></textarea>
     </div>
     <button type='submit' class='btn btn-primary'>Submit</button>
 </form>
