--- a/cms-project/views/admin/posts/create.handlebars
+++ b/cms-project/views/admin/posts/create.handlebars
@@ -1,5 +1,5 @@
 <h1>Create Post</h1>
-<form action='/' method='post' enctype='multipart/form-data'>
+<form action='/admin/posts/create' method='post' enctype='multipart/form-data'>
     <div class='form-group'>
         <label for='exampleInputTitle1'>Title</label>
         <input type='text' class='form-control' id='exampleInputTitle1' aria-describedby='etitleelp'>
