Save a post VP 90

--- a/cms-project/views/admin/posts/create.handlebars
+++ b/cms-project/views/admin/posts/create.handlebars
@@ -15,8 +15,7 @@
         </select>
     </div>
     <div class="form-group form-check">
-        <input name="allowcomments" type="checkbox" id="allowComments" class="form-check-input"
-            placeholder="Enter title">
+        <input name="allowComments" type="checkbox" id="allowComments" class="form-check-input">
         <label for="allowComments">Allow Comments</label>
     </div>
     <div class="form-group">
