--- a/cms-project/views/admin/posts/edit.handlebars
+++ b/cms-project/views/admin/posts/edit.handlebars
@@ -1,5 +1,6 @@
 <h1>Edit Post</h1>
-<form action="/admin/posts/edit" method="POST">
+{{!-- _method: https://www.npmjs.com/package/method-override --}}
+<form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="POST">
     <div class="form-group">
         <label for="exampleInputTitle1">Title</label>
         <input name="title" type="text" value="{{post.title}}" class="form-control" id="exampleInputTitle1"
@@ -10,11 +11,16 @@
     <div class="form-group">
         <label for="status">Status</label>
         <select name="status" id="status" class="form-control">
+            {{#select post.status}}
             <option value="public">Public</option>
             <option value="private">Private</option>
             <option value="draft">Draft</option>
+            {{/select}}
         </select>
     </div>
+
+
+
     <div class="form-group form-check">
         <input name="allowComments" {{#if post.allowComments}} checked="checked" {{/if}} type="checkbox"
             id="allowComments" class="form-check-input">
