--- a/cms-project/views/admin/posts/index.handlebars
+++ b/cms-project/views/admin/posts/index.handlebars
@@ -1,27 +1,35 @@
 <h1>All Posts</h1>
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Title</th>
-            <th scope="col">Status</th>
-            <th scope="col">Allow Comments</th>
-            <th scope="col">Body</th>
-            <th scope="col">Action</th>
+<div class="table-responsive">
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Title</th>
+                <th scope="col">Status</th>
+                <th scope="col">Allow Comments</th>
+                <th scope="col">Body</th>
+                <th scope="col">Action</th>
 
-        </tr>
-    </thead>
-    <tbody>
-        {{!-- foreach | each: https://handlebarsjs.com/examples/partials/partial-block-parameters.html --}}
-        {{#each posts}}
-        <tr>
-            <th scope="row">{{id}}</th>
-            <td>{{title}}</td>
-            <td>{{status}}</td>
-            <td>{{allowComments}}</td>
-            <td>{{body}}</td>
-            <td><a href="/admin/posts/edit/{{id}}" class="btn btn-info">Edit</td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
+            </tr>
+        </thead>
+        <tbody>
+            {{!-- foreach | each: https://handlebarsjs.com/examples/partials/partial-block-parameters.html --}}
+            {{#each posts}}
+            <tr>
+                <th scope="row">{{id}}</th>
+                <td>{{title}}</td>
+                <td>{{status}}</td>
+                <td>{{allowComments}}</td>
+                <td>{{body}}</td>
+                <td><a href="/admin/posts/edit/{{id}}" class="btn btn-info mr-1">Edit</a>
+                    <form action="/admin/posts/{{id}}?_method=DELETE" method="POST"
+                        onclick="return confirm('Are you sure you want to delete this item?');">
+                        <button type="submit" class="btn btn-danger mt-1">DELETE</button>
+                    </form>
+                </td>
+
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
