Fake Data or Dummy Data VP 100-101

--- a/cms-project/views/admin/index.handlebars
+++ b/cms-project/views/admin/index.handlebars
@@ -1,1 +1,10 @@
 <h1>Admin</h1>
+<div class="row">
+    <form action="/admin/generate-faker-posts" method="post">
+        <h1>Create Fake Posts</h1>
+        <div class="form-group">
+            <input type="number" name="amount" id="" class="form-control">
+        </div>
+        <button type="submit">Create</button>
+    </form>
+</div>
