--- a/cms-project/views/admin/posts/create.handlebars
+++ b/cms-project/views/admin/posts/create.handlebars
@@ -1,8 +1,14 @@
 <h1>Create Post</h1>
-<form action="/admin/posts/create" method="POST">
+<form action="/admin/posts/create" method="POST" enctype="multipart/form-data">
     <div class="form-group">
         <label for="exampleInputTitle1">Title</label>
         <input name="title" type="text" class="form-control" id="exampleInputTitle1" aria-describedby="etitleelp">
+        {{!-- <small id="titleHelp" class="form-text text-muted">We"ll never share your email with anyone else.</small>
+        --}}
+    </div>
+    <div class="form-group">
+        <label for="exampleInputFile1">File Upload</label>
+        <input name="file" type="file" class="form-control" id="exampleInputFile1" aria-describedby="UploadFile">
         {{!-- <small id="titleHelp" class="form-text text-muted">We"ll never share your email with anyone else.</small>
         --}}
     </div>
